<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.doanything</groupId>
    <artifactId>doanything-payment</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>doanything-dependencies</module>
        <module>doanything-commons</module>
        <module>doanything-framework</module>
        <module>doanything-parent</module>
        <module>app/member</module>
        <module>app/mgs</module>
        <module>doanything-archetypes</module>
        <module>doanything-dependencies-third</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
